--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,20 @@
 
 
-
+body{
+    display: flex;
+    flex-direction: column;
+}
 
 
 .saludo {
-font-size: 120px;
-color:white;
-background-color: purple;
-text-align: center;
+    font-size: 120px;
+    color:white;
+    background-color: purple;
+    text-align: center;
+}
+
+.registro{
+    font-size: 25px;
+    color:black;
+    text-decoration: none;
 }
