--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="saludo">Hola Grupo 3</div>
+    <div class="saludo">Bienvenidos</div>
+    <div class="registro"><a href="/registro">Registro</div></a>
     
 </body>
 </html>
