--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,6 @@
 <body>
     <div class="saludo">Bienvenidos</div>
     <div class="registro"><a href="/registro">Registro</div></a>
-    
+    <div class="login"><a href="/login">Login</div></a>
 </body>
 </html>
