--- a/public/css/password.css
+++ b/public/css/password.css
@@ -1,7 +1,6 @@
 
 
 
-
 /*************** Generales ***************/
 
 * {
@@ -37,13 +36,10 @@ body {
     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 700;
     padding-bottom: 55px;
     color:#9BA0A3;
-}
-.caja-datos {
-    display: flex;
     flex-direction: column;
 }
 .info-usuario{
@@ -53,11 +49,8 @@ body {
     border-bottom: solid 2px black;
     width: 190px;
     padding-left: 12px;
-}
-.caja-links{
-    display: flex;
+    padding-top: 10px;
     flex-direction: column;
-    margin-top: -10px;
 }
 .boton{
     display: flex;
@@ -66,17 +59,6 @@ body {
     color: white;
     padding: 8px 43px;
     border-radius: 10px;
-    font-size: 26px;
+    font-size: 20px;
     margin-bottom: 17px;
-}
-.letra-chica{
-    display: flex;
-    margin: auto;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 197px;
-}
-.link{
-    color:black;
 }
