--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,7 @@
-
-
 body{
     display: flex;
     flex-direction: column;
 }
-
 
 .saludo {
     font-size: 120px;
@@ -14,6 +11,18 @@ body{
 }
 
 .registro{
+    font-size: 25px;
+    color:black;
+    text-decoration: none;
+}
+
+.login{
+    font-size: 25px;
+    color:black;
+    text-decoration: none;
+}
+
+.password{    
     font-size: 25px;
     color:black;
     text-decoration: none;
