--- a/views/login.html
+++ b/views/login.html
@@ -34,7 +34,10 @@
                 <div class="info-usuario">Contraseña</div>
             </div>
             <div class="caja-links">
-                <div class="boton">Iniciar Sesión</div>
+                <button class="boton">Iniciar Sesión</button>
+                <div class="recordar">
+                    <input type="checkbox">
+                    <p>Recordame</p></div>
                 <div class="letra-chica">
                     <div><a class="pregunta" href="/password">¿Olvidaste tu contraseña?</a></div>
                     <div class="cuenta">¿No tenes cuenta?</div>
