--- a/public/css/password.css
+++ b/public/css/password.css
@@ -8,6 +8,9 @@
     padding: 0px;
     box-sizing:border-box;
 }
+header{
+    padding-bottom: 200px;
+}
 body {
    font-family:'Assistant', sans-serif;;
 }
@@ -18,10 +21,10 @@ body {
     justify-content: center;
     margin: auto;
     background-color: white;
-    width: 460px;
-    height: 700px;
+    height: 300px;
+    width: 400px;
     border-radius: 36px;
-    padding-bottom: 60px;
+    padding: 5px;
     
 }
 .exit{
@@ -38,9 +41,10 @@ body {
     justify-content: center;
     font-size: 35px;
     font-weight: 700;
-    padding-bottom: 55px;
+    padding-bottom: 15px;
     color:#9BA0A3;
     flex-direction: column;
+    text-align: center;
 }
 .info-usuario{
     font-size: 18px;
