modifique la estructura

--- a/views/detalles.html
+++ b/views/detalles.html
@@ -38,13 +38,13 @@
 
                 <div class="login-register">
 
-                    <a class="registro" href="/registro">Registrarse</a>
+                    <a class="register" href="/registro">Registrarse</a>
                     
                     <div class="icono-barras">
                         <i class="fa-solid fa-grip-lines-vertical"></i>                    
                     </div>
                     
-                    <a class="login" href="/login">Iniciar sesión</a>
+                    <a class="inicio-sesion" href="/login">Iniciar sesión</a>
                     
                 </div>
 
@@ -63,8 +63,8 @@
                         <p>Search Bar</p>
                     </div>
 
-                    <div class="carrito">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                    <div>
+                        <a href="/carrito" class="carrito"><i class="fa-solid fa-cart-shopping"></i></a>
                         <p class="numero-carrito">0</p>
                     </div>
 
@@ -77,13 +77,101 @@
 
         <main>
 
-            <div class="cruz-cerrar">
-                <i class="fa-solid fa-x"></i>
-            </div>
+            <section>
 
-            <div class="carrusel">
-                <p>imagen del producto</p>
-            </div>
+                <div class="imagenes-cruz">
+
+                    <div class="ruta-cruz">
+
+                        <div class="ruta-producto">
+                            <a href="/" style="text-decoration: none;">Inicio</a> / ????? / Producto
+                        </div>
+
+                        <div class="cruz-cerrar">
+                            <i class="fa-solid fa-x"></i>
+                        </div>
+
+                    </div>
+
+                    <div class="carrusel">
+                        <p>imagen del producto</p>
+                    </div>
+                    
+                    <div class="contenedor-minis">
+
+                        <div class="miniaturas-img">
+                            
+                            <div class="mini">
+                                <p>img 1</p>
+                            </div>
+
+                            <div class="mini">
+                                <p>img 2</p>
+                            </div>
+
+                            <div class="mini">
+                                <p>img 3</p>
+                            </div>
+                        
+                        </div>
+
+                    </div>
+                
+                </div>
+
+                <div class="detalles-producto">
+
+                    <div class="details nombre-producto">
+                        <h2>Nombre del Producto</h2>
+                    </div>
+
+                    <div class="details tamanio">
+                        <p>750 cc</p>
+                    </div>
+
+                    <div class="details precio">
+                        <h3>$2222</h3>
+                    </div>
+
+                    <div class="details cantidad-agregar">
+
+
+                        <div class="cantidad-sumar">
+
+                            <div>
+                                <p>Cantidad</p>
+                            </div>
+
+                            <div class="sumar-restar">
+                                <p>- 1 +</p>
+                            </div>
+
+                        </div>
+
+                        <div class="agregar-formas">
+
+                            <div class="details agregar-al-carrito">
+                                <p>Agregar al carrito</p>
+                            </div>
+
+                            <div class="details formas-de-pago">
+                                <p>Ver formas de pago</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="details descripcion-producto">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus possimus itaque esse neque laudantium eos beatae iste, molestiae, ipsam facilis nemo vero animi assumenda. Aspernatur ducimus debitis quaerat doloremque aperiam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad sit iure sed eveniet labore amet quae eligendi totam nisi dicta veniam quod, optio perspiciatis cum. Natus officia dolores unde amet?</p>
+                    </div>
+
+                </div>
+
+            </section>
+
+
+
         </main>
 
     </body>
