--- a/public/css/detalles.css
+++ b/public/css/detalles.css
@@ -19,9 +19,19 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
     flex-grow: 0.3;
-    font-size: 14px;
+}
+
+.inicio-sesion{
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+}
+
+.register{
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
 }
 
 .icono-barras{
@@ -39,27 +49,110 @@ header{
     border-bottom: solid 1px black;
 }
 
+.carrito{
+    color:black;
+    text-decoration: none;
+}
+
 .numero-carrito{
     display: inline;
     font-size: 12px;
 }
 
+.ruta-cruz{
+    margin: 0 auto;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.ruta-producto{
+    color: black;
+}
+
 .cruz-cerrar{
     height: 40px;
     display: flex;
-    flex-direction: row-reverse;
-    padding: 10px 20px;
     align-items: center;
 }
 
 .carrusel{
     display: flex;
     align-items: center;
-    width: 330px;
-    height: 330px;
-    margin: 0 auto;
+    width: 90vw;
+    max-width: 400px;
+    height: 90vw;
+    max-height: 400px;
+    margin: 0 auto 20px auto;
     justify-content: space-around;
     background: mediumpurple;
+}
+
+.contenedor-minis{
+    display: flex;
+    width: 100%;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.miniaturas-img{
+    padding: 0 50px;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    max-width: 400px;
+    min-width: 300px;
+}
+
+.mini{
+    display: flex;
+    height: 10vw;
+    width: 10vw;
+    max-width: 65px;
+    max-height: 65px;
+    min-width: 50px;
+    min-height: 50px;
+    background: mediumpurple;
+    align-items: center;
+    justify-content: center;
+}
+
+.detalles-producto{
+    padding: 20px 40px;
+    margin: 0 auto;
+    max-width: 500px;
+}
+
+.details{
+    margin: 10px 0;
+}
+
+.cantidad-agregar{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.cantidad-sumar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 50px;
+}
+
+.sumar-restar{
+    margin: 0 auto;
+}
+
+.agregar-formas{
+    display: flex;
+    flex-direction: column;
 }
 
 *{
