primer home de productos

--- a/views/index.html
+++ b/views/index.html
@@ -16,5 +16,7 @@
     <div class="saludo">Bienvenidos</div>
     <div class="registro"><a href="/registro">Registro</div></a>
     <div class="login"><a href="/login">Login</div></a>
+    <div class="home-productos"><a href="/home-productos">Home Producto</div></a>
+
 </body>
 </html>
