--- a/views/password.html
+++ b/views/password.html
@@ -24,13 +24,19 @@
 </head>
 <body>
     <header>
-        <div class="exit"><i class="fa-solid fa-circle-xmark"></i></div>
+        <div class="exit"><a href="/"><i class="fa-solid fa-circle-xmark"></i></a></div>
     </header>
     <main>
         <section class="cuadro">
             <div class="saludo-logo">Recuperar la contraseña</div>
-            <div class="info-usuario">Mail</div>
-            <div class="boton">Enviar</div>
+            <form method="get" action="/">
+                <div class="password">
+                    <div>
+                        <input class="box-info-user" type="text" name="email" placeholder="E-mail">
+                    </div>
+                </div>
+                    <input type="submit" class="boton" value="Enviar"></input>
+            </form>
         </section>
     </main>
 </body>
