--- a/public/css/login.css
+++ b/public/css/login.css
@@ -59,6 +59,22 @@ body {
     flex-direction: column;
     padding-top: 10px;
 }
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box-info-user{
+    font-size: 18px;
+    margin: auto;
+    margin-bottom: 30px;
+    border: none;
+    width: 190px;
+    padding-left: 12px;
+    border-bottom: 2px solid black;
+}
+
 .boton{
     display: flex;
     margin: auto;
