--- a/public/css/password.css
+++ b/public/css/password.css
@@ -8,9 +8,6 @@
     padding: 0px;
     box-sizing:border-box;
 }
-header{
-    padding-bottom: 200px;
-}
 body {
    font-family:'Assistant', sans-serif;;
 }
@@ -21,12 +18,13 @@ body {
     justify-content: center;
     margin: auto;
     background-color: white;
-    height: 300px;
-    width: 400px;
+    width: 460px;
+    height: 700px;
     border-radius: 36px;
-    padding: 5px;
+    padding-bottom: 60px;
     
 }
+
 .exit{
     display: flex;
     justify-content: flex-end;
@@ -41,21 +39,21 @@ body {
     justify-content: center;
     font-size: 35px;
     font-weight: 700;
-    padding-bottom: 15px;
+    padding-bottom: 55px;
     color:#9BA0A3;
-    flex-direction: column;
-    text-align: center;
 }
-.info-usuario{
+
+
+.box-info-user{
     font-size: 18px;
     margin: auto;
     margin-bottom: 30px;
-    border-bottom: solid 2px black;
+    border: none;
     width: 190px;
     padding-left: 12px;
-    padding-top: 10px;
-    flex-direction: column;
+    border-bottom: 2px solid black;
 }
+
 .boton{
     display: flex;
     margin: auto;
@@ -64,5 +62,14 @@ body {
     padding: 8px 43px;
     border-radius: 10px;
     font-size: 20px;
-    margin-bottom: 17px;
+    margin-bottom: 5px;
+    border: 0.5px solid #eee;
+}
+
+.password{
+    text-align: center;
+    display: flex;
+    margin-bottom: 10px;
+    font-size: small;
+    justify-content: center;
 }
