--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,7 @@
     <!-- Recomiendan esta hoja ultima -->
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/home-productos.css" />
+    <link rel="stylesheet" href="/css/header-footer.css" />
   </head>
 
   <body>
