--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -5,7 +5,8 @@ header {
 .logo img {
     display: flex;
     flex-wrap: nowrap;
-    width: 90%;
+    width: 50vw;
+    height: auto;
     border: 1px solid purple;
     border-radius: 10px;
     padding: 10px;
@@ -101,6 +102,7 @@ footer{
 
 .link {
     color: white;
+    text-decoration: none;
 }
 
 @media screen and (min-width: 769px){
