--- a/views/detalles.html
+++ b/views/detalles.html
@@ -56,8 +56,6 @@
 
             <section class="seccion">
 
-                
-
                 <div class="ruta-cruz">
 
                     <div class="ruta-producto">
@@ -105,9 +103,7 @@
                             </div>
 
                         </div>
-                    
-                    
-
+            
                         <div class="contenedor-detalles">
 
                             <div class="details nombre-producto">
@@ -334,7 +330,7 @@
 
                         <div class="news">
 
-                            <div class="titulos-chicos titulo-news">
+                            <div class="titulos-chicos titulos-footer">
                                 <h3>Newsletter</h3>
                             </div>
 
@@ -358,7 +354,7 @@
 
                     <div class="contacto">
 
-                        <div class="titulos-chicos titulo-contacto">
+                        <div class="titulos-chicos titulos-footer">
                             <h3>Contacto y Redes</h3>
                         </div>
 
@@ -390,10 +386,37 @@
 
                     <div class="mapa-sitio">
 
-                        <div class="titulos-chicos titulo-mapa">
+                        <div class="titulos-chicos titulos-footer">
                             <h3>Mapa del sitio</h3>
                         </div>
 
+                        <div class="botones-mapa">
+
+                            <div class="margen-contacto">
+                                <a href="/nosotros" class="link-mapa">¿Quiénes somos?</a>
+                            </div>
+
+                            <div class="margen-contacto">
+                                <a href="/suscripciones" class="link-mapa">Suscripciones</a>
+                            </div>
+
+                            <div class="margen-contacto">
+                                <a href="/FAQ" class="link-mapa">FAQ</a>
+                            </div>
+
+                            <div class="margen-contacto">
+                                <a href="/productos" class="link-mapa">Productos</a>
+                            </div>
+
+                            <div class="margen-contacto">
+                                <a href="/terminos-y-condiciones" class="link-mapa">Términos y condiciones</a>
+                            </div>
+
+                            <div class="margen-contacto">
+                                <a href="/politicas-de-privacidad" class="link-mapa">Políticas de privacidad</a>
+                            </div>
+
+                        </div>
 
                     </div>
 
