--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
       <div class="barra-funciones">
         <i class="fa-solid fa-bars"></i>
         <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-cart-shopping"></i>
+        <a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a>
       </div>
     </header>
     <br />
